# agents-vector-memory

./: .gitignore  CHANGELOG.md  README.md  add_logging_to_search.py  add_return_types.py  add_search_logging.patch  apply_clean_fixes.py  apply_logging_instrumentation.py  apply_phase1_fixes.py  apply_schema_fixes.py  bug3_bug4_fix.patch  create_test_data_final.py  fix_api_final.py  fix_commas.py  fix_part2_tests.py  fix_schema_validation.py  improve_error_handling.py  logging_instrumentation.patch  main.py  main.py.before-bug3-bug4-fix  main.py.before_step6  main_transformation.py  mypy.ini  pyproject.toml  pytest.ini  refactor_modules.py  requirements-dev.txt  requirements.txt  run_all_tests.py  run_all_tests.sh  run_filter_tests.py  test_chunking.py  test_chunking_debug.py  test_cleanup_log.md  test_comprehensive_mcp.py  test_connection.py  test_connection_leak_fix.py  test_connection_simple.sh  test_consolidated_search.py  test_db_fixes.py  (+25 more)
documentation/vector-memory-specification/: VECTOR_MEMORY_ARCHITECTURE.md  VECTOR_MEMORY_CHUNKING_ALGORITHM.md  VECTOR_MEMORY_MCP_SPECIFICATION.md  VECTOR_MEMORY_SEARCH_ALGORITHMS.md  VECTOR_MEMORY_SEMANTIC_SEARCH_ANALYSIS.md  VECTOR_MEMORY_SQL_SCHEMA.md  VECTOR_MEMORY_UPGRADE_SUMMARY.md  VECTOR_MEMORY_WORKING_MEMORY_TEST_REPORT.md
migrations/: 001_add_granularity_metadata.sql  002_update_existing_data.py  MIGRATION_FIX_SUMMARY.md  README.md  add_metadata_columns.py  run_migration.py  test_yaml_frontmatter.py  verify_schema.py
src/: __init__.py  chunking.py  chunking_storage.py  config.py  db_migrations.py  db_migrations.py.bak6  exceptions.py  maintenance.py  maintenance.py.backup-pre-task6  mcp_types.py  memory_types.py  retry_utils.py  search.py  security.py  session_memory_store.py  session_memory_store.py.backup  session_memory_store.py.backup-20251002-130404  session_memory_store.py.backup-20251007  session_memory_store.py.backup-before-medium-fix  session_memory_store.py.backup-before-search-impl  session_memory_store.py.backup-before-vec-fix  session_memory_store.py.backup-pre-task6  session_memory_store.py.bak  session_memory_store.py.bak2  session_memory_store.py.bak3  session_memory_store.py.bak7  session_memory_store.py.bak8  session_memory_store.py.bak9  session_memory_store.py.before-real-fix  session_memory_store_broken.py  session_memory_store_fixed.py  session_memory_store_updated.py  stdout_suppressor.py  storage.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_performance.py
tests/integration/: test_store_with_chunks.py  test_structured_outputs.py  test_wal_mode.py  test_write_document_to_file.py  test_yaml_frontmatter.py  test_yaml_frontmatter.py.bak2
tests/tools_testing/: MCP_TOOLS_TEST_EXECUTION_REPORT.md  TEST_REPORT.md  mcp_tools_test_design.md
tests/unit/: test_agent_id_input_prompt.py  test_chunking_comprehensive.py  test_direct_chunking.py  test_easy_wins.py  test_easy_wins_2.py  test_easy_wins_3.py  test_easy_wins_3.py.bak  test_easy_wins_3.py.bak2  test_exceptions_targeted.py  test_maintenance_ops.py  test_modular_architecture.py  test_session_memory_store_comprehensive.py  test_session_memory_store_module.py
